// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error if the authentication error is passed 1`] = `
<section
  className="LoginForm"
>
  <div
    className="LoginForm__container padding-v-bigger bg-skew"
  >
    <div
      className="container container-tiny"
    >
      <div
        className="alert alert-error margin-c"
        role="alert"
      >
        There was an error connecting to the Kubernetes API. Please check that your token is valid.
      </div>
    </div>
    <div
      className="bg-skew__pattern bg-skew__pattern-dark type-color-reverse"
    >
      <div
        className="container"
      >
        <h2>
          <Lock
            color="currentColor"
            size="24"
          />
           Login
        </h2>
        <p>
          Your cluster operator should provide you with a Kubernetes API token.
           
          <a
            href="https://github.com/kubeapps/kubeapps/blob/master/docs/user/access-control.md"
            target="_blank"
          >
            Click here
          </a>
           
          for more info on how to create and use Bearer Tokens.
        </p>
        <div
          className="bg-skew__content"
        >
          <form
            onSubmit={[Function]}
          >
            <div>
              <label
                htmlFor="token"
              >
                Kubernetes API Token
              </label>
              <input
                id="token"
                name="token"
                onChange={[Function]}
                placeholder="Token"
                required={true}
                type="password"
                value=""
              />
            </div>
            <p>
              <button
                className="button button-accent"
                type="submit"
              >
                Login
              </button>
            </p>
          </form>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders a token login form 1`] = `
<section
  className="LoginForm"
>
  <div
    className="LoginForm__container padding-v-bigger bg-skew"
  >
    <div
      className="container container-tiny"
    />
    <div
      className="bg-skew__pattern bg-skew__pattern-dark type-color-reverse"
    >
      <div
        className="container"
      >
        <h2>
          <Lock
            color="currentColor"
            size="24"
          />
           Login
        </h2>
        <p>
          Your cluster operator should provide you with a Kubernetes API token.
           
          <a
            href="https://github.com/kubeapps/kubeapps/blob/master/docs/user/access-control.md"
            target="_blank"
          >
            Click here
          </a>
           
          for more info on how to create and use Bearer Tokens.
        </p>
        <div
          className="bg-skew__content"
        >
          <form
            onSubmit={[Function]}
          >
            <div>
              <label
                htmlFor="token"
              >
                Kubernetes API Token
              </label>
              <input
                id="token"
                name="token"
                onChange={[Function]}
                placeholder="Token"
                required={true}
                type="password"
                value=""
              />
            </div>
            <p>
              <button
                className="button button-accent"
                type="submit"
              >
                Login
              </button>
            </p>
          </form>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`while authenticating loading spinner matches the snapshot 1`] = `
<LoadingWrapper
  loaded={false}
  type={0}
/>
`;
